Bug 333196 - Clicking a taskbar thumbnail doesn't bring window to front.
Summary: Clicking a taskbar thumbnail doesn't bring window to front.
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: master
Platform: unspecified Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-04-08 10:41 UTC by Antonio Rojas
Modified: 2014-04-09 00:47 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2014-04-08 10:41:00 UTC
Clicking a taskbar thumbnail doesn't bring the window to the front. This is a regression from KDE4

Reproducible: Always
Comment 1 Eike Hein 2014-04-09 00:47:56 UTC
Git commit fd5d67db99855765a710d5ebf4d7524b108f36ea by Eike Hein.
Committed on 09/04/2014 at 00:46.
Pushed by hein into branch 'master'.

Make clicks on window thumbnails raise windows again.

Also converted thumbnail size to gridUnit.

M  +14   -3    applets/taskmanager/package/contents/ui/ToolTipDelegate.qml
M  +2    -0    applets/taskmanager/package/contents/ui/main.qml
M  +4    -0    applets/taskmanager/plugin/backend.cpp
M  +1    -0    applets/taskmanager/plugin/backend.h

http://commits.kde.org/plasma-desktop/fd5d67db99855765a710d5ebf4d7524b108f36ea