Make clicks on window thumbnails raise windows again.

BUG:333196

Also converted thumbnail size to gridUnit.